Cleanup: use List.of().